--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,23 @@
 plugins {
 	id 'java'
 	id 'war'
-	id 'org.springframework.boot' version '3.3.0'
-	id 'io.spring.dependency-management' version '1.1.5'
+	id 'org.springframework.boot' version '2.6.8'
+	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
 group = 'com.miris'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+	sourceCompatibility = '1.8'
 }
 
 repositories {
 	mavenCentral()
+}
+ext {
+    mapstructVersion = "1.5.5.Final"
+    lombokVersion = "1.18.28"
 }
 
 dependencies {
@@ -37,9 +39,23 @@ dependencies {
 	 // jpa
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     
+    // jdbc
+    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+    implementation 'com.mysql:mysql-connector-j:8.0.33'
+    implementation 'com.jcraft:jsch:0.1.55'
+    
     // utils
+    implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage-generated:2.16.0'
+    implementation 'com.oracle.oci.sdk:oci-java-sdk-objectstorage-extensions:2.16.0'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation 'commons-io:commons-io:2.6'
+
+    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+    implementation 'org.modelmapper:modelmapper:2.4.4'
+    
+    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
 }
 
 tasks.named('test') {
