--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,17 @@ spring.application.name=auth
 
 ## redis 
 spring.session.store-type=redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.redis.host=223.130.157.98
+spring.redis.port=6379
 server.port = 8088
 
 
-spring.security.user.name=user
-spring.security.user.password=password
+
+spring.datasource.url=jdbc:mysql://223.130.157.98:3306/my_database
+spring.datasource.username=my_user
+spring.datasource.password=my_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
