--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.session.store-type=redis
 spring.redis.host=223.130.158.27
 spring.redis.port=6379
 server.port = 8088
+server.servlet.session.timeout=1m
+
 
 
 
@@ -16,3 +18,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
